--- a/student-store-api/.env
+++ b/student-store-api/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="postgresql://postgres:<YourPassword>@localhost:5432/<YourDatabase>?schema=public"
+DATABASE_URL="postgresql://postgres:jj412331@localhost:5432/student_store?schema=public"
+PORT=3000
